index.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600;700;800&family=Pacifico&family=Open+Sans:wght@300;400;500;600&family=Roboto:wght@700&display=swap');

* {
  padding: 0;
  margin: 0;
}

html {
  scroll-behavior: smooth;
}

body {
  margin: auto 0px;
  padding: 0px;
  font-family: 'Open Sans', sans-serif;
  font-weight: 200;
  font-size: 12pt;
  background-color: #FCFCFC;
  transition: 0.3s;
}
body.dark-theme {
  color: #DDD;
  background: #161719;
}

b {
  /* Format all bolds */
  font-family: 'Open Sans', sans-serif;
  font-weight: 600;
}

p {
  text-align: left;
  padding-top: 8px;
  padding-bottom: 8px;
  margin: 0px;
}
@media screen and (min-width: 600px) {
   p {
      text-align: justify;
   }
}

h1.title {
  margin-top: 90px;
  text-align: center;
  font-family: 'Montserrat', sans-serif;
  font-size: 48pt;
  font-weight: 800;
  color: #48DEB1;
}

h2.subtitle {
  margin-bottom: 50px;
  text-align: center;
  font-size: 23pt;
  line-height: 25pt;
  font-family: 'Montserrat', sans-serif;
  font-weight: 200;
}

h3 {
  padding-bottom: 4px;
  padding-top: 30px;
}

a {
  color: #222222;
  cursor: pointer;
  transition: all 0.3s ease 0s;
}
body.dark-theme a {
  color: #FFF;
}

a:hover {
  color: #48DEB1;
}
body.dark-theme a:hover {
  color: #48DEB1;
}

div.main {
  margin: 0 auto;
  width: 95%;
  max-width: 900px;
  padding-top: 50px;
  padding-bottom: 50px
}

ol {
  padding-left: 2rem;
}

ol li {
  padding-bottom: 2px;
}



/*  For navigation/header */
header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #FCFCFC;
  margin: 0px;
  padding: 0px;
  font-size: 10pt;
  z-index: 20;
  position: fixed;
  /* Set the navbar to fixed position */
  top: 0;
  /* Position the navbar at the top of the page */
  width: 100%;
  border-bottom: #FCFCFC 1px solid;
  transition: 0.3s;
}
body.dark-theme header {
  background-color: #161719;
}

#header-logo {
  font-family:'Montserrat',sans-serif;
  color: #222;
  font-size: 16pt;
  text-decoration: none;
  padding: 18px 10px 18px 5%;
  /* text-shadow: 0px 0px 2px #48DEB1; */
  text-shadow: -0.8px 0.8px 0px #48DEB1;
  line-height: 13pt;
}
body.dark-theme #header-logo {
  color: white;
}

#header-logo:hover {
  color: #555;
}

nav {
  padding: 10px 5% 10px 0px;
  text-align: right;
  width: 60%;
  vertical-align: center;
}

.nav-list {
  list-style: none;
}

.nav-list li {
  display: inline-block;
  padding: 0.5% 10px;
  vertical-align: middle;
}

.nav-link {
  text-decoration: none;
  color: #333;
  transition: all 0.3s ease 0s;
  font-weight: 400;
  top: -500px;
}

.nav-link:hover {
  color: #48DEB1;
}

a.anchor {
  display: block;
  position: relative;
  top: -60px;
  visibility: hidden;
}

.footer {
  margin-top: 30px;
  padding-top: 50px;
  margin-bottom: 0px;
  padding-bottom: 20px;
  font-size: 11pt;
  border-top: #DDD 1px solid;
}
body.dark-theme .footer{
  border-top: #333 1px solid;
}

.ref {
  margin-top: 10px;
  margin-bottom: 10px;
  padding: 0px;
  padding-left: 10px;
  color: #EEE;
  border-left: solid #CCC 2px;
  color: #777;
}

.ref:hover {
  color: var(--a0);
  transition: ease 0.3s;
  border-left: solid #48DEB1 2px;
}


#data-link-a img:nth-child(2) {
  display: none;
}
#data-link-a:hover img:nth-child(2) {
  display: block;
}
#data-link-a:hover img:first-child {
  display: none;
}

.imgwrap {
  display: block;
  padding-bottom: 45px;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}

#img1 {
  /* formatting for image below title */
  width: 100%;
  max-width: 464px;
  display: inline;
}

#img2 {
  /* formatting for image below title */
  width: 65.4%;
  max-width: 303px;
  display: inline;
}



/* For control components */
div.control {
  padding: 0px 30px 5px 0px;
  display: inline-block;
  vertical-align: text-top;
  margin-bottom: 5px;
  width: 140px;
}

.textinput {
  font-family: 'Open Sans', Arial, sans-serif;
  font-size: 11pt;
  border-radius: 3pt;
  font-weight: 300;
  padding: 5px 10px 5px 10px;
  border: 2px solid #E3E3E3;
  background-color: white;
  transition: all 0.3s ease 0s;
  width: 110px;
}
body.dark-theme .textinput {
  border: 2px solid #222;
  background-color: black;
  color: white;
}

.textinput:hover {
  border: 2px solid #48DEB1;
}
body.dark-theme .textinput:hover {
  border: 2px solid #48DEB1;
}

.textinput:focus {
  border: 2px solid #48DEB1;
}
body.dark-theme .textinput:focus {
  border: 2px solid #48DEB1;
}

.control-label {
  font-family: 'Open Sans', sans-serif;
  font-weight: 600;
  color: #444;
  font-size: 10pt;
}
body.dark-theme .control-label {
  color: #DDD;
}

.control-unit {
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
  color: #BBB;
  font-size: 10pt;
}
body.dark-theme .control-unit {
  color: #666;
}

div.control label {
  font-size: 11pt;
  cursor: pointer;
}

.output-div {
  display: inline-block;
}

input[type="checkbox"]{
  -webkit-appearance: initial;
  appearance: initial;
  width: 9pt;
  height: 9pt;
  font-size: 10pt;
  border: 1.5px #BBB solid;
  border-radius: 50%;
  background: white;
  position: relative;
  transition: all 0.3s;
  cursor: pointer;
}
input[type="checkbox"]:checked {

}
input[type="checkbox"]:checked:after {
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  content: "\f058"; /* tick unicode. */
  color: #48DEB1;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -moz-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.cbC {
  padding: 0px;
  margin: 0px;
}

#select-div {
  width: 200px;
}

select {
  font-family: 'Open Sans', Arial, sans-serif;
  font-size: 11pt;
  border-radius: 3pt;
  font-weight: 300;
  padding: 5px 10px 5px 10px;
  border: 2px solid #E3E3E3;
  background-color: white;
  transition: all 0.3s ease 0s;
  width: 197px;
}
body.dark-theme select {
  border: 2px solid #222;
  background-color: black;
  color: white;
}

select:hover {
  border: 2px solid #48DEB1;
}
body.dark-theme select:hover {
  border: 2px solid #48DEB1;
}

select:focus {
  border: 2px solid #48DEB1;
}

option {
  font-family: 'Open Sans',  Arial, sans-serif;
  font-size: 11pt;
  font-weight: 300;
}



/* for blue slider */
.slider {
  -webkit-appearance: none;
  width: 100%;
  height: 5pt;
  border-radius: 5px;
  background: #E3E3E3;
  outline: none;
  -webkit-transition: .2s;
  transition: all .2s;
  cursor: pointer;
}
body.dark-theme .slider {
  background: #555;
}

.slider::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 11pt;
  height: 11pt;
  border-radius: 50%;
  border: 1pt solid #FCFCFC;
  background: #48DEB1;
  cursor: pointer;
}
body.dark-theme .slider::-webkit-slider-thumb {
  border: 1pt solid #161719;
}

.slider::-moz-range-thumb {
  width: 11pt;
  height: 11pt;
  border-radius: 50%;
  background: #48DEB1;
  cursor: pointer
}


/* For plot elements */
.axis {
  font-family: 'Open Sans', Arial, sans-serif;
  font-size: 10pt;
  font-weight: 200;
}
.axis line {
  stroke: black;
}
body.dark-theme .axis line {
  stroke: white;
}

.axis path {
  stroke: black;
}
body.dark-theme .axis path {
  stroke: white;
}

.axis text{
  fill: black;
}
body.dark-theme .axis text{
  fill: white;
}

.legend-label {
  fill: black;
}
body.dark-theme .legend-label {
  fill: white;
}

.legend-circle {
  fill: #EDEDED;
  stroke: black;
}
body.dark-theme .legend-circle {
  fill: #222;
  stroke: white;
}

.plot-fill {
  fill: white;
}
body.dark-theme .plot-fill {
  fill: black;
}

body.dark-theme .diff-line {
  stroke: white;
}

